Modificaciones a los tipos de trabajos
